--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
 </head>
 <body>
-<h1>FoE Helper Support</h1>
-<div>
-	<img src="logo.png" alt="Italian Trulli">
-</div>
-    <a href="mailto:app.foe.helper@gmail.com?subject=FoE Helper Support">Send us a message</a>
-<div>
-</div>
+    <center>
+        <h1>FoE Helper Support</h1>
+        <div>
+	        <img src="logo.png" alt="Italian Trulli">
+        </div>
+        <div>
+            <a href="mailto:app.foe.helper@gmail.com?subject=FoE Helper Support">Send us a message</a>
+        </div>
+    </center>
 </body>
 </html>
