--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <center>
         <h1>FoE Helper Support</h1>
         <div>
-	        <img src="logo.png" alt="Italian Trulli">
+	        <img src="logo.png" alt="FoE Helper">
         </div>
         <div>
             <a href="mailto:app.foe.helper@gmail.com?subject=FoE Helper Support">Send us a message</a>
